Comply with doNotUsePaths Violation